--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "coming-soon",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://arkn98.github.io/coming-soon",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -33,6 +32,6 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^5.0.1"
   }
 }
