--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "react-dom": "^18.2.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+   
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "dev": "react-scripts start",
-    "eject": "react-scripts eject"
+   
+    "dev": "react-scripts start"
+   
   },
   "eslintConfig": {
     "extends": "react-app"
